--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<body>
-  <h1>Hello World</h1>
-  <p>I'm hosted with GitHub Pages.</p>
+<head></head>
+
+<body style="background-color: chocolate;">
+  <h1 style="color:burlywood">Charlie Wright</h1>
+  <p>Welcome to my website.</p>
 </body>
 
 </html>
