--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head></head>
 
-<body style="background-color: chocolate;">
-  <h1 style="color:burlywood">Charlie Wright</h1>
+<body style="background: linear-gradient(to bottom, #ccccff 20%, #000066 100%);">
+  <h1 style="color:burlywood;font-size:400%;text-align:center;">Charlie Wright</h1>
   <p>Welcome to my website.</p>
 </body>
 
