--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head></head>
 
-<body style="background: linear-gradient(to bottom, #ccccff 20%, #000066 100%);">
+<body style="background-color: 6c6760;" ;>
   <h1 style="color:burlywood;font-size:400%;text-align:center;">Charlie Wright</h1>
   <p>Welcome to my website.</p>
 </body>
+<hl style="color: f3b358;"></hl>
 
 </html>
