--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head></head>
 
-<body style="background-color: 6c6760;" ;>
-  <h1 style="color:burlywood;font-size:400%;text-align:center;">Charlie Wright</h1>
+<body style="background-color: #6c6760;" ;>
+  <h1 style="color:burlywood;font-size:400%;text-align:center;border:2px solid #f3b358">Charlie Wright</h1>
   <p>Welcome to my website.</p>
 </body>
-<hl style="color: f3b358;"></hl>
+<hr style="color: #f3b358;">
 
-<h1 style="border:2px solid f3b358"> <b>Example</b></h1>
+<h1 style="border:2px solid #f3b358"> <b>Example</b></h1>
 
 </html>
