--- a/index.html
+++ b/index.html
@@ -3,12 +3,154 @@
 
 <head></head>
 
-<body style="background-color: #6c6760;" ;>
+<style>
+  html {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(to bottom, #f5be70 15%, #a7660c 100%);
+  }
+
+  body {
+    background-color: #6c6760;
+  }
+</style>
+
+<body>
   <h1 style="color:burlywood;font-size:400%;text-align:center;border:2px solid #f3b358">Charlie Wright</h1>
   <p>Welcome to my website.</p>
 </body>
 <hr style="color: #f3b358;">
 
 <h1 style="border:2px solid #f3b358"> <b>Example</b></h1>
+
+<p><i>British Admiral Howe's got troops on the water
+    Thirty-two thousand troops in New York harbour
+    Thirty-two thousand troops in New York harbour (thirty-two thousand troops in New York harbour)
+    When they surround our troops, they surround our troops
+    When they surround our troops (they surround our troops)
+    As a kid in the Caribbean, I wished for a war
+    I knew that I was poor
+    I knew it was the only way to rise up
+    If they tell my story
+    I am either gonna die on the battlefield in glory or rise up
+    I will fight for this land
+    But there's only one man who can give us a command, so we can rise up
+    Understand? It's the only way to rise up, rise up
+    Here he comes
+    Ladies and gentlemen!
+    (Here comes the General!) The moment you've been waiting for!
+    (Here comes the General!) The pride of Mount Vernon!
+    (Here comes the General!) George Washington!
+    We are outgunned (what?)
+    Outmanned (what?)
+    Outnumbered, outplanned (buck, buck, buck, buck, buck!)
+    We gotta make an all out stand
+    Ayo, I'm gonna need a right-hand man (buck, buck, buck, buck, buck!)
+    Check it, can I be real a second?
+    For just a millisecond?
+    Let down my guard and tell the people how I feel a second?
+    Now, I'm the model of a modern major general
+    The venerated Virginian veteran
+    Whose men are all lining up, to put me up on a pedestal
+    Writin' letters to relatives, embellishin' my elegance and eloquence, but
+    The elephant is in the room
+    The truth is in your face when you hear the British cannons go boom!
+    Any hope of success is fleeting
+    How can I keep leading when the people I'm leading keep retreating?
+    We put a stop to the bleeding as the British take Brooklyn
+    Knight takes rook, but look
+    We are outgunned (what?)
+    Outmanned (what?)
+    Outnumbered, outplanned (buck, buck, buck, buck, buck!)
+    We gotta make an all out stand
+    Ayo, I'm gonna need a right-hand man (buck, buck, buck, buck, buck!)
+    Incoming!
+    They're battering down the battery, check the damages (rah!)
+    We gotta stop 'em and rob 'em of their advantages (rah!)
+    Let's take a stand with the stamina God has granted us
+    Hamilton won't abandon ship, yo, let's steal their cannons
+    Shh-boom, goes the cannon, watch the blood and the shit spray, and
+    And boom, goes the cannon, we're abandonin' Kips Bay
+    And boom, there's another ship
+    And boom, we just lost the southern tip
+    And boom, we gotta run to Harlem quick, we can't afford another slip
+    Guns and horses giddyup
+    I decide to divvy up my forces
+    They're skittish as the British cut the city up
+    This close to givin' up, facing mad scrutiny
+    I scream in the face of this mass mutiny
+    Are these the men with which I am to defend America?
+    We ride at midnight, Manhattan in the distance
+    I cannot be everywhere at once, people!
+    I'm in dire need of assistance
+    Your excellency, sir!
+    Who are you?
+    Aaron Burr, Sir
+    Permission to state my case?
+    As you were
+    Sir, I was a captain under General Montgomery until he caught a bullet in the neck in Quebec
+    And well, in summary
+    I think that I could be of some assistance
+    I admire how you keep firing on the British from a distance (huh)
+    I have some questions, a couple of suggestions
+    On how to fight instead of fleeing west
+    Yes?
+    Well-
+    Your excellency, you wanted to see me?
+    Hamilton, come in, have you met Burr?
+    Yes, sir, we keep meeting
+    As I was saying, sir, I look forward to seeing your strategy play out
+    Burr?
+    Sir?
+    Close the door on your way out
+    Have I done something wrong, sir?
+    On the contrary
+    I called you here because our odds are beyond scary
+    Your reputation precedes you, but I have to laugh
+    Sir?
+    Hamilton, how come no one can get you on their staff?
+    Sir!
+    Don't get me wrong, you're a young man of great renown
+    I know you stole British cannons when we were still downtown
+    Nathaniel Green and Henry Knox wanted to hire you
+    Yeah, to be their Secretary? I don't think so
+    Now why are you upset? I'm not
+    It's alright, you wanna fight, you've got a hunger
+    I was just like you when I was younger
+    Head full of fantasies of dying like a martyr?
+    Yes
+    Dying is easy, young man, living is harder
+    Why are you telling me this?
+    I'm being honest
+    I'm working with a third of what our Congress has promised
+    We are a powder keg about to explode
+    I need someone like you to lighten the load, so?
+    I am not throwing away my shot!
+    I am not throwing away my shot!
+    Ayo, I'm just like my country, I'm young, scrappy and hungry!
+    I am not throwing away my shot!
+    Son, we are outgunned, outmanned!
+    You need all the help you can get
+    I have some friends, Laurens, Mulligan
+    Marquis de Lafayette, okay, what else?
+    Outnumbered, outplanned!
+    We'll need some spies on the inside
+    Some king's men who might let some things slide
+    I'll write to Congress and tell 'em we need supplies
+    You rally the guys, master the element of surprise
+    (Chicka-boom!) I'll rise above my station, organize your information
+    'Til we rise to the occasion of our new nation, sir!
+    Here comes the General
+    Rise up! (What?)
+    Here comes the General
+    Rise up! (What?)
+    Here comes the General
+    Rise up! (What?)
+    Here comes the General
+    (What?) And his right-hand man!
+    Boom!
+    Source: Musixmatch
+    Songwriters: Lin-manuel Miranda
+    Right Hand Man lyrics © 5000 Broadway Music</i></p>
 
 </html>
