--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head></head>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
 <style>
-  html {
-    height: 100vh;
-    width: 100%;
-    background-image: linear-gradient(to bottom, #f5be70 15%, #a7660c 100%);
-  }
-
-  body {
-    background-color: #6c6760;
-  }
 </style>
 
 <body>
-  <h1 style="color:burlywood;font-size:400%;text-align:center;border:2px solid #f3b358">Charlie Wright</h1>
+  <h1>Charlie Wright</h1>
   <p>Welcome to my website.</p>
 </body>
 <hr style="color: #f3b358;">
 
-<h1 style="border:2px solid #f3b358"> <b>Example</b></h1>
+<h1> <b>Example</b></h1>
 
 <p><i>British Admiral Howe's got troops on the water
     Thirty-two thousand troops in New York harbour
