--- a/index.html
+++ b/index.html
@@ -3,18 +3,78 @@
 
 <head>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
 </head>
+<script>
+  window.canvas = null;
+  window.canvasContext = null;
+  window.rgb = [];
 
+  function debounce(func, timeout) {
+    let timer;
+    return (...args) => {
+      clearTimeout(timer);
+      timer = setTimeout(() => { func.apply(this, args); }, timeout);
+    };
+  }
+
+  function setColor(offsetY) {
+    var p = null;
+    if (window.canvas == null) {
+      //... nothing
+    } else {
+      if (window.canvasContext == null) {
+        window.canvasContext = window.canvas.getContext('2d');
+      }
+      if (window.rgb[offsetY] !== undefined) {
+        p = window.rgb[offsetY];
+      } else {
+        p = window.canvasContext.getImageData(1, 70 + offsetY, 1, 1).data;
+        window.rgb[offsetY] = p;
+      }
+      document.getElementById("colorDisplay").style.backgroundColor = "rgb(" + p[0] + ", " + p[1] + ", " + p[2] + ")";
+    }
+  }
+
+  function loadCanvas() {
+    html2canvas(document.body, { scale: '1', scrollY: 0 }).then((canvas) => {
+      window.canvas = canvas;
+      setColor(window.pageYOffset);
+    });
+  }
+
+  (function () {
+    loadCanvas();
+    window.onscroll = debounce(() => setColor(window.pageYOffset), 10);
+  })();
+
+</script>
 <style>
+  html {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(to bottom, #f5be70 15%, #a7660c 100%);
+    background-attachment: fixed;
+  }
+
+  body {
+    background-color: #6c6760;
+  }
+
+  p {
+    id="colorDisplay";
+  }
 </style>
 
+
 <body>
-  <h1>Charlie Wright</h1>
+  <h1 style="color:burlywood;font-size:400%;text-align:center;border:2px solid #f3b358">Charlie Wright</h1>
   <p>Welcome to my website.</p>
+
 </body>
 <hr style="color: #f3b358;">
 
-<h1> <b>Example</b></h1>
+<h1 style="border:2px solid #f3b358"> <b>Example</b></h1>
 
 <p><i>British Admiral Howe's got troops on the water
     Thirty-two thousand troops in New York harbour
