--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 
 
 <body>
-  <h1 style="color:burlywood;font-size:400%;text-align:center;border:2px solid #f3b358">Charlie Wright</h1>
+  <h1>Charlie Wright</h1>
   <p>Welcome to my website.</p>
 
 </body>
 <hr style="color: #f3b358;">
 
-<h1 style="border:2px solid #f3b358"> <b>Example</b></h1>
+<h1> <b>Example</b></h1>
 
 <p><i>British Admiral Howe's got troops on the water
     Thirty-two thousand troops in New York harbour
