--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
   <h1>Charlie Wright</h1>
   <p>Welcome to my website.</p>
 
+
+  <hr style="color: #f3b358;">
+
+  <h1> <b>Example</b></h1>
+
+  <p>Paragraph 1</p>
+  <a href="https://cornell.digication.com/charlie-wrights-portfolio" title="View Portfolio">
+    View my portfolio from MAE2250</a>
 </body>
-<hr style="color: #f3b358;">
-
-<h1> <b>Example</b></h1>
-
-<p></p>
 
 </html>
