--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="styles.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
+  <!--script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script-->
 </head>
 <script>
   window.canvas = null;
@@ -60,7 +60,7 @@
   <h1> <b>Example</b></h1>
 
   <p>Paragraph 1</p>
-  <a href="https://cornell.digication.com/charlie-wrights-portfolio" title="View Portfolio">
+  <a href="https://cornell.digication.com/charlie-wrights-portfolio" title="View Portfolio" target="_blank">
     View my portfolio from MAE2250</a>
 </body>
 
