--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
   <link rel="stylesheet" href="styles.css">
   <!--script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script-->
 </head>
+
+<style>
+  html {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(to bottom, #f5be70 15%, #a7660c 100%);
+    background-attachment: fixed;
+  }
+
+  body {
+    background-color: #6c6760;
+    margin: 1px;
+    padding: 5px;
+  }
+
+  h1 {
+    color: burlywood;
+    font-size: 400%;
+    text-align: center;
+    border: 2px solid #f3b358;
+  }
+
+  a:hover {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+</style>
 <script>
   window.canvas = null;
   window.canvasContext = null;
@@ -62,6 +90,9 @@
   <p>Paragraph 1</p>
   <a href="https://cornell.digication.com/charlie-wrights-portfolio" title="View Portfolio" target="_blank">
     View my portfolio from MAE2250</a>
+
+  <br>
+  <p>updated</p>
 </body>
 
 </html>
