--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <!--script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script-->
 </head>
 
-<style>
+<!--style>
   html {
     height: 100vh;
     width: 100%;
@@ -32,7 +32,7 @@
     background-color: transparent;
     text-decoration: underline;
   }
-</style>
+</style-->
 <script>
   window.canvas = null;
   window.canvasContext = null;
@@ -93,6 +93,11 @@
 
   <br>
   <p>updated</p>
+  <hr>
+  <h1>Header 1</h1>
+  <h2>Header 2</h2>
+  <h3>Header 3</h3>
+  <h4>Header 4</h4>
 </body>
 
 </html>
