--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <title></title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <!--script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script-->
 </head>
@@ -101,3 +102,105 @@
 </body>
 
 </html>
+
+
+
+<!--
+
+<html>
+<head>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
+</head>
+
+<style>
+  html {
+    height: 100vh; not needed
+    width: 100%;  not needed
+    background-image: linear-gradient(to bottom, #f5be70 15%, #a7660c 100%);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+</style>
+
+<body style="margin: 0px; padding: 0px; color:blue;">
+
+
+
+
+
+
+
+<div style="width: 100%; position: fixed; background-color: #000;height: 69px;">
+    <h1 id="colorDisplay"; width: 500px; float:left;">Color box (on the right)</h1>
+    
+    <span style="width: 30px; height: 30px; float:right" >hjbhbdj</span>
+</div>
+
+
+<div style="width: 1px; position: fixed; background-image: linear-gradient(to bottom, #f5be70 15%, #a7660c 100%);
+height: 400%;">
+</div>
+
+
+<div>
+<div style="height:550px; background-color:#00ff00;width:100%"></div>
+<div style="height:550px; background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);width:100%"></div>
+<div style="height:550px; background-color:#0f0f0f;width:100%"></div>
+<div style="height:1050px; background-color:#ff0000;width:100%"></div>
+
+
+</div>
+
+<script>
+window.canvas = null;
+window.canvasContext = null;
+window.rgb = [];
+
+function debounce(func, timeout)
+{
+  let timer;
+  return (...args) => {
+    clearTimeout(timer);
+    timer = setTimeout(() => { func.apply(this, args); }, timeout);
+  };
+}
+
+function setColor(offsetY)
+{
+    var p = null;
+    if(window.canvas == null) {
+            //... nothing
+    } else {
+        if(window.canvasContext == null){
+      window.canvasContext = window.canvas.getContext('2d');
+        }
+        if(window.rgb[offsetY] !== undefined) {
+            p = window.rgb[offsetY];
+        } else {
+            p = window.canvasContext.getImageData(0, offsetY, 1, 1).data;
+            window.rgb[offsetY] = p;
+        }
+        document.getElementById("colorDisplay").style.color = "rgb(" + p[0]+", "+p[1]+", "+p[2] + ")";
+    }
+}
+
+function loadCanvas()
+{
+    html2canvas(document.body, {scale: '1', scrollY: 0}).then((canvas) => {
+        window.canvas = canvas;
+        setColor(window.pageYOffset);
+    });
+}
+
+(function(){
+    loadCanvas();
+    window.onscroll = debounce(() => setColor(window.pageYOffset), 10);
+})();
+
+</script>
+</body>
+</html>
+
+-->
