--- a/index.html
+++ b/index.html
@@ -113,10 +113,7 @@ height: 400%;">
     <br>
     <p>updated</p>
     <hr>
-    <h1 class="colorDisplay">Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header 1
-      Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 Header
-      1
-      Header 1 Header 1 Header 1 Header 1 Header 1 Header 1 </h1>
+    <h1 class="colorDisplay">Header 1</h1>
     <h2 class="colorDisplay">Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header 2
       Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header 2 Header
       2
