--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <!--script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script-->
 </head>
 
-<!--style>
+<style>
+  .colorDisplay {
+    font-size: 100%;
+  }
+
   html {
     height: 100vh;
     width: 100%;
@@ -17,8 +21,8 @@
 
   body {
     background-color: #6c6760;
-    margin: 1px;
-    padding: 5px;
+    margin: 0px;
+    padding: 0px;
   }
 
   h1 {
@@ -26,6 +30,7 @@
     font-size: 400%;
     text-align: center;
     border: 2px solid #f3b358;
+
   }
 
   a:hover {
@@ -34,18 +39,18 @@
     text-decoration: underline;
   }
 
-   ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: blue;
-}
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: blue;
+  }
 
-li a {
- 
-}
-</style-->
+  li a {
+    float: left;
+  }
+</style>
 <script>
   window.canvas = null;
   window.canvasContext = null;
