--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
   <title></title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 
 <body>
 
-  <div style="width: 10px; position: fixed; background-image: linear-gradient(to bottom, #f5be70 15%, #a7660c 100%);
-height: 100%;">
-  </div>
+  <!--div style="width: 10px; position: fixed; background-image: linear-gradient(to bottom, #f5be70 15%, #a7660c 100%);
+height: 100%;"
+  </div-->
 
-  <div>
+  <div class="mainPage">
     <h1>Charlie Wright</h1>
     <p>Welcome to my website.</p>
     <p>
@@ -111,58 +113,6 @@ height: 100%;">
   </div>
 
 
-  <!--script>
-    window.canvas = null;
-    window.canvasContext = null;
-    window.rgb = [];
-
-    function debounce(func, timeout) {
-      let timer;
-      return (...args) => {
-        clearTimeout(timer);
-        timer = setTimeout(() => { func.apply(this, args); }, timeout);
-      };
-    }
-
-    function setColor(offsetY) {
-      var p = null;
-      if (window.canvas == null) {
-        //... nothing
-      } else {
-        if (window.canvasContext == null) {
-          window.canvasContext = window.canvas.getContext('2d');
-        }
-        if (window.rgb[offsetY] !== undefined) {
-          p = window.rgb[offsetY];
-        } else {
-          p = window.canvasContext.getImageData(0, offsetY, 1, 1).data;
-          window.rgb[offsetY] = p;
-        }
-
-
-        var i = document.getElementsByClassName("colorDisplay");
-        for (var ob = 0; ob < i.length; ob++) {
-
-          document.getElementsByClassName("colorDisplay")[ob].style.color = "rgb(" + p[0] + ", " + p[1] + ", " + p[2] + ")";
-
-        }
-
-      }
-    }
-
-    function loadCanvas() {
-      html2canvas(document.body, { scale: '1', scrollY: 0 }).then((canvas) => {
-        window.canvas = canvas;
-        setColor(window.pageYOffset);
-      });
-    }
-
-    (function () {
-      loadCanvas();
-      window.onscroll = debounce(() => setColor(window.pageYOffset), 10);
-    })();
-
-  </script-->
 
 
   <script>
