--- a/index.html
+++ b/index.html
@@ -167,9 +167,23 @@ height: 100%;"
       Words Words Words Words Words Words Words Words Words Words Words Words Words Words Words Words Words Words Words
     </p>
 
-    <h1>Theater Experience</h1>
-    <h1>Engineering World Health</h1>
+
+
     <h1>Portfolio</h1>
+    <div>
+      <h2 class="colorDisplay">Projects</h2>
+      <p>Here are some projects I worked on in class and on my own</p>
+    </div>
+    <div>
+      <h2 class="colorDisplay">Engineering World Health</h2>
+      <p>Here is what I have been doing with my project team Engineering World Health</p>
+    </div>
+    <div>
+      <h2 class="colorDisplay">Theater Experience</h2>
+      <p>Here is what I worked on in theater</p>
+    </div>
+
+
     <hr>
     <h2>connect with me</h2>
     <p>caw352@cornell.edu</p>
