--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@ height: 100%;"
 
   <div class="mainPage">
     <h1>Charlie Wright</h1>
+    <nav>
+      <ul>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+
+      </ul>
+    </nav>
     <p>Welcome to my website.</p>
     <p>
       My name is Charlie Wright. I am a junior studying Mechanical Engineering at Cornell University.
@@ -169,7 +177,7 @@ height: 100%;"
 
 
 
-    <h1>Portfolio</h1>
+    <h1 id="#portfolio">Portfolio</h1>
     <div>
       <h2 class="colorDisplay">Projects</h2>
       <p>Here are some projects I worked on in class and on my own</p>
