--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ height: 100%;"
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
 
+
       </ul>
     </nav>
     <p>Welcome to my website.</p>
@@ -177,7 +178,7 @@ height: 100%;"
 
 
 
-    <h1 id="#portfolio">Portfolio</h1>
+    <h1 id="portfolio">Portfolio</h1>
     <div>
       <h2 class="colorDisplay">Projects</h2>
       <p>Here are some projects I worked on in class and on my own</p>
