formatted buttons list

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ height: 100%;"
   <div class="mainPage">
     <h1>Charlie Wright</h1>
     <nav>
-      <ul>
+      <ul class="buttonList">
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
