--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@ height: 100%;"
     <h1>Charlie Wright</h1>
     <nav>
       <ul class="buttonList">
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><button class="btn-hover"><a href="#portfolio">Portfolio</a></button></li>
+        <li><button class="btn-hover"><a href="#portfolio">Portfolio</a></button></li>
+        <li><button class="btn-hover"><a href="#portfolio">Portfolio</a></button></li>
+
 
 
       </ul>
