--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ height: 100%;"
     </nav>
     <p>Welcome to my website.</p>
     <p>
-      My name is Charlie Wright. I am a junior studying Mechanical Engineering at Cornell University.
+      My name is Charlie Wright. I am a junior studying Mechanical Engineering at Cornell University. I am passionate
+      about mechanical product design.
       <br>
       I also enjoy computer science, something I was unfamiliar with until taking the introductory course at Cornell
       where I grew to really love it. This inspired me to pursue a Computer Science minor and to join the course staff
@@ -51,28 +52,28 @@ height: 100%;"
     <br>
     <p>updated</p>
     <hr>
-    <h2> Some of my favorite classes at Cornell:</h2>
+    <h2 class="colorDisplay"> Some of my favorite classes at Cornell:</h2>
     <ul>
-      <li>MAE2250: Mechanical Synthesis - </li>
-      <li>MAE2030: Dynamics - This course </li>
-      <li>CS1110: Intro to Computer Science (Python)- This course sparked my interest in computer science and inspired
-        me to become a TA. I had found coding to be tedious to learn in high school, but the professor for this course
-        brought so much enthusiasm to his lectures, and was always exceptionally clear in his explanations of concepts
-        that I found myself really loving programming and computer science as a whole. He had some extremely fun
-        moments and always knew how to wrap up a lecture, including my favorite mic drop of his that everything in
+      <li><b>MAE2250: Mechanical Synthesis</b> - This course explored the </li>
+      <li><b>MAE2030: Dynamics</b> - This course </li>
+      <li><b>CS1110: Intro to Computer Science (Python)</b> - This course sparked my interest in computer science and
+        inspired me to become a TA. I had found coding to be tedious to learn in high school, but the professor for this
+        course brought so much enthusiasm to his lectures, and was always exceptionally clear in his explanations of
+        concepts that I found myself really loving programming and computer science as a whole. He had some extremely
+        fun moments and always knew how to wrap up a lecture, including my favorite mic drop of his that everything in
         Python we had known up to that point was an Object. I am thankful that I have the opportunity to explore my
         passions at a university with professors who reciprocate that enthusiasm.</li>
-      <li>PE : Swing Dance - I took this course with a few friends because we knew we would have to dance with
+      <li><b>PE : Swing Dance</b> - I took this course with a few friends because we knew we would have to dance with
         partners, but the instructors made us constantly swap between partners every minute or so. Because of this I
         got to know everyone in the class pretty well and became more comfortable just starting a dance with someone.
         It was very fun to adapt to everyones different dancing style. My friends and I even looked through our own
         music
         playlists and found songs with great rhythms to rock-step to outside of class. </li>
-      <li>VIEN : Cider - This course explored the history, economics, and biological and chemical processes behind
-        cider production. The class did not even count towards my graduation, but I really wanted a class where I
-        could learn a lot about one very specific topic. If I were not an engineer I think I would definitely explore
-        Food Science because I really enjoyed learning about the science behind cider and apple production.</li>
-      <li>set design or hnhe</li>
+      <li><b>VIEN : Cider</b> - This course explored the history, economics, and biological and chemical processes
+        behind cider production. I really wanted a class where I could learn a lot about one very specific topic. If I
+        were not an engineer I think I would definitely exploreFood Science because I really enjoyed learning about the
+        science behind cider and apple production.</li>
+      <li><b>set design or hnhe</b></li>
     </ul>
     <hr>
     <h1 class="colorDisplay">Header 1</h1>
