--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ height: 100%;"
     <button class="btn-hover">Hello</button>
     <nav>
       <ul class="buttonList">
-        <li><button class="btn-hover"><a href="#portfolio">Portfolio</a></button></li>
-        <li><button class="btn-hover"><a href="#portfolio">Portfolio</a></button></li>
-        <li><button class="btn-hover"><a href="#portfolio">Portfolio</a></button></li>
+        <li><button class="btn-hover" href="#portfolio">Portfolio</button></li>
+        <li><button class="btn-hover" href="https://www.linkedin.com/in/a6223a21b/">LinkedIn</button></li>
+        <li><button class="btn-hover"><a href="#portfolio">Email</a></button></li>
 
 
 
