--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@ height: 100%;"
 
     <h1> <b>Example</b></h1>
 
+    <div id="flex-parent">
+      <div id="flex-child1">
+        <p>sharu</p>
+      </div>
+      <div id="flex-child2">
+        <p>michelle</p>
+      </div>
+    </div>
+
     <p>Paragraph 1</p>
     <a href="https://cornell.digication.com/charlie-wrights-portfolio" title="View Portfolio" target="_blank">
       View my portfolio from MAE2250</a>
